--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -101,6 +101,14 @@
                   </button>
                 </div>
               </form>
+              <div class="text-center">
+                <form th:action="@{/register}" method="POST">
+                  <p>Hey there! Are you new here and don't have an account?</p>
+                  <button type="submit" class="btn btn-primary btn-block mb-4">
+                    Create New Account
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
