--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,7 +36,7 @@
                       Sign up
                     </p>
 
-                    <form class="mx-1 mx-md-4" th:action="@{/}" method="POST">
+                    <form class="mx-1 mx-md-4" th:action="@{/api/user}" method="POST">
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
@@ -87,7 +87,7 @@
                     </div>
                   </div> -->
 
-                      <div
+                      <!-- <div
                         class="form-check d-flex justify-content-center mb-5"
                       >
                         <input
@@ -100,7 +100,7 @@
                           I agree all statements in
                           <a href="#!">Terms of service</a>
                         </label>
-                      </div>
+                      </div> -->
 
                       <div
                         class="d-flex justify-content-center mx-4 mb-3 mb-lg-4"
