--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,7 +36,7 @@
                       Sign up
                     </p>
 
-                    <form class="mx-1 mx-md-4" th:action="@{/api/user}" method="POST">
+                    <form class="mx-1 mx-md-4" action="/api/user" method="POST">
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
