--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,16 +36,16 @@
                       Sign up
                     </p>
 
-                    <form class="mx-1 mx-md-4" action="/api/user" method="POST">
+                    <form class="mx-1 mx-md-4" action="/api/user" method="POST" data-th-object="${user}">
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="form3Example1c"
+                          <label class="form-label" for="name"
                             >Display Name</label
                           >
                           <input
                             type="text"
-                            id="form3Example1c"
+                            id="name"
                             class="form-control"
                           />
                         </div>
@@ -54,12 +54,12 @@
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="form3Example3c"
+                          <label class="form-label" for="email"
                             >Email</label
                           >
                           <input
                             type="email"
-                            id="form3Example3c"
+                            id="email"
                             class="form-control"
                           />
                         </div>
@@ -68,12 +68,12 @@
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="form3Example4c"
+                          <label class="form-label" for="password"
                             >Password</label
                           >
                           <input
                             type="password"
-                            id="form3Example4c"
+                            id="password"
                             class="form-control"
                           />
                         </div>
