--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -107,7 +107,7 @@
             </form>
           </div>
           <div class="col mb-3">
-            <form action="/explore" method="GET">
+            <form action="/search" method="GET">
               <input
                 type="text"
                 name="book"
