Updated CSS for explore page

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" th:href="@{/css/error.css}" />
+    <link th:href="@{/styles/error.css}" rel="stylesheet" />
     <link
       th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
       rel="stylesheet"
@@ -58,7 +58,7 @@
           </svg>
         </button>
       </form>
-      <p><a th:href="@{/profile}">Home</a></p>
+      <p><a th:href="@{/home}">Home</a></p>
       <p><a th:href="@{/goals}">Reading Goals</a></p>
       <p><a th:href="@{/tribe}">Book Tribe</a></p>
       <p><a th:href="@{/about}">About Us</a></p>
