--- a/src/main/resources/templates/explore.html
+++ b/src/main/resources/templates/explore.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link th:href="@{/styles/explore.css}" rel="stylesheet" />
     <link
       th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
       rel="stylesheet"
@@ -63,23 +63,20 @@
       </div>
     </nav>
 
-    <section>
-      <div class="container" style="margin-top: 5%">
-        <div class="row">
-          <div class="h1 text-center text-dark" id="pageHeaderTitle">
-            <h1>Search Results For: <span data-th-text="${book}"></span></h1>
-          </div>
-          <div class="col-lg-6 mb-4" data-th-each="r: ${results}">
-            <div class="card">
+    <section style="padding: 100px"> 
+      <div class="h1 text-center text-dark" id="pageHeaderTitle">
+        <h1>Search Results For: <span data-th-text="${book}"></span></h1>
+      </div>
+      <div class="container d-flex align-items-center justify-content-center position-relative flex-wrap" >
+        <div class="card d-flex position-relative flex-column" data-th-each="r: ${results}">
+            <div class='imgContainer'>
               <img
                 data-th-src="@{${r.imgUrl}}"
                 alt=""
                 style="width: 200px; height: 200px; padding: 10px"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <span class="fw-bold mb-1" data-th-text="${r.title}"></span>
-                </h5>
+              />            </div>
+            <div class="content">
+                <h5 data-th-text="${r.title}"></h5>
                 <p
                   class="text-muted mb-0 card-text"
                   data-th-each="author: ${r.authors}"
@@ -91,23 +88,19 @@
                   data-th-each="category: ${r.categories}"
                 >
                   Categories: <span data-th-text="${category}"></span>
-                </p>
-
+                </p>      
                 <a
-                  th:href="@{'/explore/' + ${r.id}}"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  More Info
-                </a>
-                <a href="#" class="btn btn-outline-secondary btn-sm">
-                  <i class="bi bi-bookmark-heart-fill"></i
-                ></a>
+                th:href="@{'/explore/' + ${r.id}}"
+                class="btn btn-outline-primary btn-sm"
+              >
+                More Info
+              </a>
+              <a href="#" class="btn btn-outline-secondary btn-sm">
+                <i class="bi bi-bookmark-heart-fill"></i
+              ></a>      
               </div>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
+    </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script
