--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link th:href="@{/styles/login.css}" rel="stylesheet" />
     <link
       th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
       rel="stylesheet"
@@ -24,7 +24,7 @@
     <title>Book Tribe</title>
   </head>
   <body>
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="hero container px-4 py-5 px-md-5 text-center text-lg-start my-5">
       <div class="row gx-lg-5 align-items-center mb-5">
         <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
           <h1
@@ -53,14 +53,22 @@
 
           <div class="card bg-glass">
             <div class="card-body px-4 py-5 px-md-5">
+              <h1
+              class="display-5 fw-bold ls-tight"
+              style="color: hsl(222, 68%, 78%)"
+            >
+              Book
+              <span style="color: hsl(218, 86%, 62%)">Tribe</span>
+            </h1>
+            
               <form th:action="@{/home}" method="POST">
                 <!-- User Login -->
                 <div class="form-outline mb-4">
-                  <label for="user">Username:</label>
+                  <label for="user">Email:</label>
                   <input
-                    type="username"
-                    name="username"
-                    id="username"
+                    type="email"
+                    name="email"
+                    id="email"
                     class="form-control"
                   />
                 </div>
