--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}"
     />
+    <link th:href="@{/styles/register.css}" rel="stylesheet" />
+
 
     <title>Book Tribe</title>
   </head>
@@ -40,7 +42,7 @@
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                           <label class="form-label" for="name"
-                            >name</label
+                            >Name</label
                           >
                           <input
                             type="text"
