--- a/src/main/resources/templates/tribe.html
+++ b/src/main/resources/templates/tribe.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link th:href="@{/styles/tribe.css}" rel="stylesheet" />
     <link
       th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
       rel="stylesheet"
@@ -20,6 +20,7 @@
       rel="stylesheet"
       th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}"
     />
+
     <title>Book Tribe</title>
   </head>
   <body>
@@ -64,49 +65,28 @@
     </nav>
 
     <section>
-      <div class="container" style="margin-top: 5%">
-        <div class="row">
-          <div class="h1 text-center text-dark" id="pageHeaderTitle">
-            <h1>Connect With Your Fellow Bookworms</h1>
-          </div>
-          <div class="col-lg-6 mb-4" data-th-each="r: ${results}">
-            <div class="card">
-              <img
-                data-th-src="@{${r.imgUrl}}"
-                alt=""
-                style="width: 200px; height: 200px; padding: 10px"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  <span class="fw-bold mb-1" data-th-text="${r.title}"></span>
-                </h5>
-                <p
-                  class="text-muted mb-0 card-text"
-                  data-th-each="author: ${r.authors}"
-                >
-                  by: <span data-th-text="${author}"></span>
-                </p>
-                <p
-                  class="fw-bold mb-1"
-                  data-th-each="category: ${r.categories}"
-                >
-                  Categories: <span data-th-text="${category}"></span>
-                </p>
-
-                <a
-                  th:href="@{'/explore/' + ${r.id}}"
-                  class="btn btn-outline-primary btn-sm"
-                >
-                  More Info
-                </a>
-                <a href="#" class="btn btn-outline-secondary btn-sm">
-                  <i class="bi bi-bookmark-heart-fill"></i
-                ></a>
-              </div>
+      <div class="container" style="padding: 80px">
+        <div class="row ng-scope">
+            <div class="col-md-9 col-md-pull-3">
+                <section class="search-result-item">
+                    <a class="image-link" href="#"><img class="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                    </a>
+                    <div class="search-result-item-body">
+                        <div class="row">
+                            <div class="col-sm-9">
+                                <h4 class="search-result-item-heading"><a href="#">john doe</a></h4>
+                                <p class="info">New York, NY 20188</p>
+                                <p class="description">Not just usual Metro. But something bigger. Not just usual widgets, but real widgets. Not just yet another admin template, but next generation admin template.</p>
+                            </div>
+                            <div class="col-sm-3 text-align-center">
+                                <p class="fs-mini text-muted">5 mutual tribe members</p><a class="btn btn-primary btn-info btn-sm" href="#">Add Member</a>
+                            </div>
+                        </div>
+                    </div>
+                  </section>
             </div>
-          </div>
         </div>
-      </div>
+        </div>
     </section>
 
     <!-- Bootstrap Bundle with Popper -->
