--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
               <span style="color: hsl(218, 86%, 62%)">Tribe</span>
             </h1>
             
-              <form th:action="@{/home}" method="POST">
+              <form th:action="@{/login}" method="POST">
                 <!-- User Login -->
                 <div class="form-outline mb-4">
                   <label for="user">Email:</label>
