--- a/src/main/resources/templates/explore.html
+++ b/src/main/resources/templates/explore.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/profile}">
+        <a class="navbar-brand" th:href="@{/home}">
           <img
             src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
             alt="Avatar Logo"
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/profile}"
+              <a class="nav-link" th:href="@{/home}"
                 ><i class="bi bi-house-heart-fill"></i>Home</a
               >
             </li>
