--- a/src/main/resources/templates/tribe.html
+++ b/src/main/resources/templates/tribe.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/profile}">
+        <a class="navbar-brand" th:href="@{/home}">
           <img
             src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
             alt="Avatar Logo"
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/profile}"
+              <a class="nav-link" th:href="@{/home}"
                 ><i class="bi bi-house-heart-fill"></i>Home</a
               >
             </li>
@@ -65,28 +65,79 @@
     </nav>
 
     <section>
-      <div class="container" style="padding: 80px">
-        <div class="row ng-scope">
-            <div class="col-md-9 col-md-pull-3">
-                <section class="search-result-item">
-                    <a class="image-link" href="#"><img class="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
-                    </a>
-                    <div class="search-result-item-body">
-                        <div class="row">
-                            <div class="col-sm-9">
-                                <h4 class="search-result-item-heading"><a href="#">john doe</a></h4>
-                                <p class="info">New York, NY 20188</p>
-                                <p class="description">Not just usual Metro. But something bigger. Not just usual widgets, but real widgets. Not just yet another admin template, but next generation admin template.</p>
-                            </div>
-                            <div class="col-sm-3 text-align-center">
-                                <p class="fs-mini text-muted">5 mutual tribe members</p><a class="btn btn-primary btn-info btn-sm" href="#">Add Member</a>
-                            </div>
-                        </div>
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
+      <div class="container">
+              <div class="row justify-content-center" style="padding: 50px;">
+                <div class="col-12 col-sm-8 col-lg-6" >
+                  <div class="h1 text-center text-dark" id="pageHeaderTitle">
+                    <h1>Tribe Members</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                    <!-- Team Thumb-->
+                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                      <!-- Social Info-->
+                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
                     </div>
-                  </section>
+                    <!-- Team Details-->
+                    <div class="single_advisor_details_info">
+                      <h6>Samantha Sarah</h6>
+                      <p class="designation">Founder &amp; CEO</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    <!-- Team Thumb-->
+                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
+                      <!-- Social Info-->
+                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    </div>
+                    <!-- Team Details-->
+                    <div class="single_advisor_details_info">
+                      <h6>Nazrul Islam</h6>
+                      <p class="designation">UI Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                    <!-- Team Thumb-->
+                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
+                      <!-- Social Info-->
+                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    </div>
+                    <!-- Team Details-->
+                    <div class="single_advisor_details_info">
+                      <h6>Riyadh Khan</h6>
+                      <p class="designation">Developer</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Advisor-->
+                <div class="col-12 col-sm-6 col-lg-3">
+                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                    <!-- Team Thumb-->
+                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
+                      <!-- Social Info-->
+                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
+                    </div>
+                    <!-- Team Details-->
+                    <div class="single_advisor_details_info">
+                      <h6>Niloy Islam</h6>
+                      <p class="designation">Marketing Manager</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-        </div>
     </section>
 
     <!-- Bootstrap Bundle with Popper -->
