--- a/src/main/resources/templates/goals.html
+++ b/src/main/resources/templates/goals.html
@@ -64,14 +64,62 @@
     </nav>
 
     <section>
-      <div class="container" style="margin-top: 5%">
-        <div class="row">
-          <div class="h1 text-center text-dark" id="pageHeaderTitle">
-            <h1>You have read <span data-th-text="${book}"></span> this year</h1>
-          </div>
+      <section class="vh-100 gradient-custom-2">
+        <div class="container py-5 h-100">
+          <div
+            class="row d-flex justify-content-center align-items-center h-100"
+          >
+            <div class="col-md-12 col-xl-10">
+              <div class="card mask-custom">
+                <div class="card-body p-4 text-white">
+                  <div class="text-center pt-3 pb-2">
+                    <img
+                      src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-todo-list/check1.webp"
+                      alt="Check"
+                      width="60"
+                    />
+                    <h2 class="my-4">Reading Goals</h2>
+                  </div>
 
+                  <table class="table text-white mb-0">
+                    <thead>
+                      <tr>
+                        <th scope="col">Book</th>
+                        <th scope="col">Review</th>
+                        <th scope="col">Status</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="fw-normal">
+                        <th>
+                          <img
+                            src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                            alt="avatar 1"
+                            style="width: 45px; height: auto"
+                          />
+                          <span class="ms-2">Alice Mayer</span>
+                        </th>
+                        <td class="align-middle">
+                          <span>Call Sam For payments</span>
+                        </td>
+                        <td class="align-middle">
+                          <h6 class="mb-0">
+                              <select class="dropdown btn btn-secondary dropdown-toggle">
+                                <option value="notstarted">Not Started</option>
+                                <option value="reading">Reading</option>
+                                <option value="completed">Completed</option>
+                            </select>
+                          </h6>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
 
     <!-- Bootstrap Bundle with Popper -->
