--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -8,6 +8,10 @@ body {
   font-family: Roboto, Arial, sans-serif;
   align-items: center;
   align-content: center;
+  
+}
+
+.hero {
   background-image: url("https://images.unsplash.com/photo-1491841550275-ad7854e35ca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHJlYWRpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60");
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -15,7 +19,6 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-
 
 .bg-glass {
   background-color: hsla(0, 0%, 100%, 0.9) !important;
@@ -49,4 +52,50 @@ a:visited {
   color: black;
 
 }
+
+/* The Modal (background) */ 
+.modal {   
+  display: none; 
+/* Hidden by default */   
+  position: fixed; 
+/* Stay in place */   
+  z-index: 1; 
+/* Sit on top */
+ padding-top: 100px;
+/* Location of the box */
+  left: 0;   top: 0;   width: 100%; 
+/* Full width */   
+  height: 100%; 
+/* Full height */
+  overflow: auto; 
+/* Enable scroll if needed */
+  background-color: rgb(0,0,0); 
+/* Fallback color */
+  background-color: rgba(0,0,0,0.4); 
+/* Black w/ opacity */ 
+}
+
+/* Modal Content */ 
+.modal-content {   
+  background-color: #fefefe;   
+  margin: auto;   
+  padding: 20px;   
+  border: 1px solid #888;   
+  width: 80%; 
+}
+
+/* The Close Button */ 
+.close {   
+  color: #aaaaaa;   
+  float: right;   
+  font-size: 28px;   
+  font-weight: bold; 
+}
+
+.close:hover, .close:focus {   
+  color: #000;   
+  text-decoration: none;   
+  cursor: pointer; 
+} 
+
 
