--- a/src/main/resources/templates/goals.html
+++ b/src/main/resources/templates/goals.html
@@ -64,7 +64,7 @@
     </nav>
 
     <section>
-      <section class="vh-100 gradient-custom-2">
+      <section class="vh-100 background">
         <div class="container py-5 h-100">
           <div
             class="row d-flex justify-content-center align-items-center h-100"
