--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,8 +29,8 @@
         background-position: center;
         background-size: cover;">
                         <div class="overlay"></div>
-                        <div class="page-title  home text-center">
-                            <h5 class="heading-page"> Welcome Back Chrysalis
+                        <div class="page-title  home text-center" >
+                            <h5 class="heading-page"> Welcome Back <span data-th-text="${userDetails.username}"></span>
                             </h5>
                           </div>
                         <div class="container">
@@ -175,16 +175,18 @@
                                                 <div></div>
                                                 <div></div>
                                             </div>
-                                            <a  class="hex-content" th:href="@{/logout}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-map-signs"></i>
+                                            <form th:action="@{/logout}" method="POST">
+                                                <a  class="hex-content">
+                                                    <span class="hex-content-inner">
+                                                        <span class="icon">
+                                                            <i class="fa fa-map-signs"></i>
+                                                        </span>
+                                                        <span class="title">Logout</span>
                                                     </span>
-                                                    <span class="title">Logout</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
+                                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
+                                                </a>
+                                            </form>
+                                            </div>
                                     </div>
                                 </div>
                             </div>
