--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,107 +21,61 @@
     />
     <link th:href="@{/styles/register.css}" rel="stylesheet" />
 
-
     <title>Book Tribe</title>
   </head>
   <body>
-    <section class="vh-100" style="background-color: #eee">
-      <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-lg-12 col-xl-11">
-            <div class="card text-black" style="border-radius: 25px">
-              <div class="card-body p-md-5">
-                <div class="row justify-content-center">
-                  <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                      Sign up
-                    </p>
-
-                    <form class="mx-1 mx-md-4" action="/createAccount" method="POST">
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="name"
-                            >Name</label
-                          >
-                          <input
-                            type="text"
-                            id="name"
-                            name="name"
-                            class="form-control"
-                          />
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="username"
-                            >Username</label
-                          >
-                          <input
-                            type="text"
-                            id="username"
-                            name="username"
-                            class="form-control"
-                          />
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="email"
-                            >Email</label
-                          >
-                          <input
-                            type="email"
-                            id="email"
-                            name="email"
-                            class="form-control"
-                          />
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <label class="form-label" for="password"
-                            >Password</label
-                          >
-                          <input
-                            type="password"
-                            id="password"
-                            name="password"
-                            class="form-control"
-                          />
-                        </div>
-                      </div>
-                      <div
-                        class="d-flex justify-content-center mx-4 mb-3 mb-lg-4"
-                      >
-                        <button type="submit" class="btn btn-primary btn-lg">
-                          Register
-                        </button>
-                      </div>
-                    </form>
-                  </div>
-                  <div
-                    class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
-                  >
-                    <img
-                      src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                      class="img-fluid"
-                      alt="Sample image"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="registration-form">
+      <form action="/createAccount" method="POST">
+        <div class="form-icon">
+          <span><i class="icon icon-user"></i></span>
         </div>
-      </div>
-    </section>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control item"
+            id="name"
+            name="name"
+            placeholder="Name"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control item"
+            id="username"
+            name="username"
+            placeholder="Username"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="email"
+            class="form-control item"
+            id="email"
+            name="email"
+            placeholder="Email"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            class="form-control item"
+            id="password"
+            name="password"
+            placeholder="Password"
+          />
+        </div>
+        <div class="form-group">
+          <label for="formFile" class="form-label">Upload a Profile Picture</label>
+          <input class="form-control" type="file" id="formFile" name="profile">
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-block create-account">
+            Create Account
+          </button>
+        </div>
+      </form>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
