Fixed logout function and book search

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="registration-form">
-      <form action="/createAccount" method="POST">
+      <form action="/" method="POST">
         <div class="form-icon">
           <span><i class="icon icon-user"></i></span>
         </div>
