--- a/src/main/resources/templates/goals.html
+++ b/src/main/resources/templates/goals.html
@@ -97,10 +97,10 @@
                             alt="avatar 1"
                             style="width: 45px; height: auto"
                           />
-                          <span class="ms-2">Alice Mayer</span>
+                          <span class="ms-2">Harry Potter & The Sorcerer's Stone</span>
                         </th>
                         <td class="align-middle">
-                          <span>Call Sam For payments</span>
+                          <span>Write a Review</span>
                         </td>
                         <td class="align-middle">
                           <h6 class="mb-0">
