--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -176,6 +176,7 @@
                                                 <div></div>
                                             </div>
                                             <form th:action="@{/logout}" method="POST">
+                                                <button type="submit">
                                                 <a  class="hex-content">
                                                     <span class="hex-content-inner">
                                                         <span class="icon">
@@ -183,6 +184,7 @@
                                                         </span>
                                                         <span class="title">Logout</span>
                                                     </span>
+                                                </button>
                                                     <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                                 </a>
                                             </form>
