--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     <title>Book Tribe</title>
   </head>
   <body>
-    <div class="hero">
+    <div>
       <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
         <div class="row gx-lg-5 align-items-center mb-5">
           <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
