--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -8,12 +8,11 @@ body {
   font-family: Roboto, Arial, sans-serif;
   align-items: center;
   align-content: center;
-  
-}
-
-.hero {
-  background-image: url("https://images.unsplash.com/photo-1491841550275-ad7854e35ca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHJlYWRpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60");
+  text-align: center;
+  justify-content: center;
+  background: url(https://media.istockphoto.com/photos/natural-wood-texture-picture-id183805873?b=1&k=20&m=183805873&s=170667a&w=0&h=YCDe56-_IUFtr4NaByQqdZ8oXqrN56gmvRfPtK6aMVA=);
   background-repeat: no-repeat;
+  background-size: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
