--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,179 +23,26 @@
     <title>Book Tribe</title>
   </head>
   <body>
-    <main class="site-wrapper">
-      <div class="pt-table desktop-768">
-        <div class="pt-tablecell page-home relative" style="background-image: url(https://images.unsplash.com/photo-1486870591958-9b9d0d1dda99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
-        background-position: center;
-        background-size: cover;">
-                        <div class="overlay"></div>
-                        <div class="page-title  home text-center" >
-                            <h5 class="heading-page"> Welcome Back <span data-th-text="${userDetails.username}"></span>
-                            </h5>
-                          </div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-    
-                                    <div class="hexagon-menu clear">
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/profile}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-universal-access"></i>
-                                                    </span>
-                                                    <span class="title">Profile</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/goals}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-bullseye"></i>
-                                                    </span>
-                                                    <span class="title">Goals</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/tribe}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-braille"></i>
-                                                    </span>
-                                                    <span class="title">Tribe</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>    
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/search}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-id-badge"></i>
-                                                    </span>
-                                                    <span class="title">Search</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/inspire}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-life-ring"></i>
-                                                    </span>
-                                                    <span class="title">Inspire</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <a  class="hex-content" th:href="@{/about}">
-                                                <span class="hex-content-inner">
-                                                    <span class="icon">
-                                                        <i class="fa fa-clipboard"></i>
-                                                    </span>
-                                                    <span class="title">About</span>
-                                                </span>
-                                                <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                            </a>
-                                        </div>
-                                        <div class="hexagon-item">
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <div class="hex-item">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                            <form th:action="@{/logout}" method="POST">
-                                                <button type="submit">
-                                                <a  class="hex-content">
-                                                    <span class="hex-content-inner">
-                                                        <span class="icon">
-                                                            <i class="fa fa-map-signs"></i>
-                                                        </span>
-                                                        <span class="title">Logout</span>
-                                                    </span>
-                                                </button>
-                                                    <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                                </a>
-                                            </form>
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-      </main>
+    <section>
+        <div class="container">
+          <h1>Welcome Back</h1>
+          <h1 data-th-text="${userDetails.username}"></h1>
+        </div>
+    </section>
+    <section class="bookAnimation">
+        <a data-th-href="@{/profile}">
+            <div class="book">
+                <div class="back"></div>
+                <div class="page6"></div>
+                <div class="page5"></div>
+                <div class="page4"></div>
+                <div class="page3"></div>
+                <div class="page2"></div>
+                <div class="page1"></div>
+                <div class="front"><h3><span data-th-text="${userDetails.username}"></span>'s Profile</h3></div>
+              </div>
+        </a>
+    </section>
     <!-- Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
