--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -23,73 +23,93 @@
     <title>Book Tribe</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #6c584c">
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/home}">
+        <a class="navbar-brand" th:href="@{/profile}">
           <img
-            src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
+            src="https://media.istockphoto.com/vectors/default-profile-picture-avatar-photo-placeholder-vector-illustration-vector-id1223671392?k=20&m=1223671392&s=170667a&w=0&h=kEAA35Eaz8k8A3qAGkuY8OZxpfvn9653gDjQwDHZGPE="
             alt="Avatar Logo"
             style="width: 40px"
             class="rounded-pill"
           />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar"
-        >
+        </a>        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/home}"
-                ><i class="bi bi-house-heart-fill"></i>Home</a
+              <a class="nav-link" th:href="@{/profile}"
+                ><i class="bi bi-house-heart-fill"></i> Home </a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" th:href="@{/goals}"
-                ><i class="bi bi-bookmark-heart-fill"></i>Reading Goals</a
+                ><i class="bi bi-bookmark-heart-fill"></i> Reading Goals </a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" th:href="@{/tribe}"
-                ><i class="bi bi-person-hearts"></i>Book Tribe</a
+                ><i class="bi bi-person-hearts"></i> Book Tribe </a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/inspire}"
+                ><i class="bi bi-moon-stars-fill"></i> Inspire </a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/about}"
+                ><i class="bi bi-book-half"></i> About </a
               >
             </li>
           </ul>
+          <form class="d-flex" action="/search" method="GET">
+            <input class="form-control me-2" type="text"
+            name="book"
+            id="book"
+            placeholder="Book Name">
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+          </form>
         </div>
       </div>
     </nav>
-    <div class="container" data-th-each="d: ${details}" style="margin-top: 20px;">
-        <div class="row">
-            <div class="col-md-4">
-                <img
-                data-th-src="@{${d.imgUrl}}"
-                alt=""
-              />
-              <div class="card" style="margin-top: 20px;">
-                <div class="card-body">
-                    <p><b>Categories:</b> <span data-th-text="${d.categories}"></span></p>
-                </div>
-              </div>
-              
-            </div>
-            <div class="col-md-8">
-                <div class="card" >
-                    <div class="card-body">
-                    <h3 data-th-text="${d.title}"></h3>
-                      <h6 class="card-subtitle mb-2 text-muted" data-th-text="${d.subtitle}"></h6>
-                      <div style="padding-top: 20px;">
-                          <h5>Description</h5>
-                          <p class="card-text" data-th-utext="${d.description}"></p>
-                      </div>
-                    </div>
-                  </div>
-            </div>
+
+    <section style="padding: 100px;" >
+      <div id="wrapper">
+        <div id="container">
+    
+            <section class="open-book" data-th-each="d: ${details}">
+                <header>
+                    <h6 data-th-text="${d.authors}"></h6></h6>
+                </header>
+                <article>
+                    <h2 class="chapter-title" data-th-text="${d.title}"></h2>
+                    <img
+                    data-th-src="@{${d.imgUrl}}"
+                    alt="${d.title}"
+                  />
+                    <dl>
+                        <dt>Categories: </dt>
+                        <dd>
+                            <em data-th-text="${d.categories}"></em>
+                        </dd>
+                    </dl>
+                    <h3 class="sub-title"></h3>
+                        <p data-th-utext="${d.description}"></p>
+
+                </article>
+                
+                <footer>
+                    <ol id="page-numbers">
+                        <li>1</li>
+                        <li>2</li>
+                    </ol>
+                </footer>
+            </section>
+    
         </div>
     </div>
+    </section>
 
     <!-- Bootstrap Bundle with Popper -->
     <script
