--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -165,15 +165,16 @@
         <div class="container px-4">
           <div class="container" style="padding-top: 30px;">
             <div class="row gx-5">
-              <div class="col">
+              <div class="col-4">
                 <div class="p-3 book books-1"></div>
               </div>
-              <div class="col">
+              <div class="col-4">
                 <div class="p-3 book books-1"></div>
               </div>
-              <div class="col">
+              <div class="col-4">
                 <div class="p-3 book books-1"></div>
               </div>
+              <div class="bookshelf"></div>
             </div>
           </div>
         </div>
