--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -172,6 +172,19 @@ right: 16px;
 width:100px;
 }
 
+.bookshelf {
+	width: 100%;
+	height: 63px;
+	z-index: -1;
+	margin-top: -25px;
+	background: transparent url(https://tympanus.net/Development/3DBookShowcase/images/shelf.png) no-repeat center center;
+	position: relative;
+}
+
+.shelf {
+	background: url(https://tympanus.net/Development/3DBookShowcase/images/wood.jpg);
+}
+
 
 /* Navigation Bar */
 
