--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,123 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS -->
-    <link
-      th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <link
-      th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}"
-    />
-    <title>Book Tribe</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #6c584c">
-      <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/profile}">
-          <img
-            src="https://media.istockphoto.com/vectors/default-profile-picture-avatar-photo-placeholder-vector-illustration-vector-id1223671392?k=20&m=1223671392&s=170667a&w=0&h=kEAA35Eaz8k8A3qAGkuY8OZxpfvn9653gDjQwDHZGPE="
-            alt="Avatar Logo"
-            style="width: 40px"
-            class="rounded-pill"
-          />
-        </a>        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/profile}"
-                ><i class="bi bi-house-heart-fill"></i> Home </a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/goals}"
-                ><i class="bi bi-bookmark-heart-fill"></i> Reading Goals </a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/tribe}"
-                ><i class="bi bi-person-hearts"></i> Book Tribe </a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/inspire}"
-                ><i class="bi bi-moon-stars-fill"></i> Inspire </a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" th:href="@{/about}"
-                ><i class="bi bi-book-half"></i> About </a
-              >
-            </li>
-          </ul>
-          <form class="d-flex" action="/search" method="GET">
-            <input class="form-control me-2" type="text"
-            name="book"
-            id="book"
-            placeholder="Book Name">
-            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Bootstrap CSS -->
+  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}" rel="stylesheet" />
+  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}" />
+  <title>Book Tribe</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #6c584c">
+    <div class="container-fluid">
+      <a class="navbar-brand" th:href="@{/profile}">
+        <img
+          src="https://media.istockphoto.com/vectors/default-profile-picture-avatar-photo-placeholder-vector-illustration-vector-id1223671392?k=20&m=1223671392&s=170667a&w=0&h=kEAA35Eaz8k8A3qAGkuY8OZxpfvn9653gDjQwDHZGPE="
+          alt="Avatar Logo" style="width: 40px" class="rounded-pill" />
+      </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/profile}"><i class="bi bi-house-heart-fill"></i> Home </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/goals}"><i class="bi bi-bookmark-heart-fill"></i> Reading Goals </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/tribe}"><i class="bi bi-person-hearts"></i> Book Tribe </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/inspire}"><i class="bi bi-moon-stars-fill"></i> Inspire </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white" th:href="@{/about}"><i class="bi bi-book-half"></i> About </a>
+          </li>
+        </ul>
+        <form class="d-flex" action="/search" method="GET">
+          <input class="form-control me-2" type="text" name="book" id="book" placeholder="Book Name">
+          <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
+        </form>
+        <div style="margin-left: 50px;">
+          <form class="d-flex" action="/logout" method="post">
+            <button class="btn btn-outline-light" type="submit"><i class="bi bi-door-closed-fill"></i> Logout</button>
           </form>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="bg-light">
-      <div class="container py-5">
-        <div class="row h-100 align-items-center py-5">
-          <div class="col-lg-6">
-            <h1 class="display-4">Who Are We?</h1>
-            <p class="lead text-muted mb-0">Created by fellow bookworms like you</p>
-            <p class="lead text-muted mb-0">We wanted a fun way to keep track of our books and reading habits!</p>
+  <div class="bg-light">
+    <div class="container py-5">
+      <div class="row h-100 align-items-center py-5">
+        <div class="col-lg-6">
+          <h1 class="display-4">Who Are We?</h1>
+          <p class="lead text-muted mb-0">Created by fellow bookworms like you</p>
+          <p class="lead text-muted mb-0">We wanted a fun way to keep track of our books and reading habits!</p>
 
-          </div>
-          <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png" alt="" class="img-fluid"></div>
+        </div>
+        <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png"
+            alt="" class="img-fluid"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="bg-white py-5">
+    <div class="container py-5">
+      <div class="row align-items-center mb-5">
+        <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
+          <h2 class="font-weight-light">Keep track of your reading habits</h2>
+          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+          <a th:href="@{/goals}" class="btn btn-light px-5 rounded-pill shadow-sm">Create a Goal</a>
+        </div>
+        <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
+            src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt=""
+            class="img-fluid mb-4 mb-lg-0"></div>
+        <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
+          <h2 class="font-weight-light">Get to know fellow bookworms</h2>
+          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+          <a th:href="@{/tribe}" class="btn btn-light px-5 rounded-pill shadow-sm">Connect with the Tribe</a>
         </div>
       </div>
     </div>
-    
-    <div class="bg-white py-5">
-      <div class="container py-5">
-        <div class="row align-items-center mb-5">
-          <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-            <h2 class="font-weight-light">Keep track of your reading habits</h2>
-            <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </div>
 
-            <a th:href="@{/goals}" class="btn btn-light px-5 rounded-pill shadow-sm">Create a Goal</a>
-          </div>
-          <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-          <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-            <h2 class="font-weight-light">Get to know fellow bookworms</h2>
-            <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
 
-            <a th:href="@{/tribe}" class="btn btn-light px-5 rounded-pill shadow-sm">Connect with the Tribe</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
