Added a new motivational quote api for inspiration page

--- a/src/main/resources/templates/inspire.html
+++ b/src/main/resources/templates/inspire.html
@@ -81,7 +81,7 @@
                   <blockquote class="blockquote">
                     <p class="pb-3">
                       <i class="fas fa-quote-left fa-xs text-primary"></i>
-                      <span class="lead font-italic" data-th-text="${q.text}"></span>
+                      <span class="lead font-italic" data-th-text="${q.content}"></span>
                       <i class="fas fa-quote-right fa-xs text-primary"></i>
                     </p>
                   </blockquote>
