Updated the Inspiration page with a random quote

--- a/src/main/resources/templates/inspire.html
+++ b/src/main/resources/templates/inspire.html
@@ -65,19 +65,21 @@
       </div>
     </nav>
 
-    <section class="vh-100" style="background-color: #eee;">
-      <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col col-lg-9 col-xl-7">
-            <div class="card" style="border-radius: 15px;">
-              <div class="card-body p-5">
+    <section class="quote" data-th-each="q: ${quote}">
+      <article class="container">
+
+        <h1>Quote of the Day</h1>
+
+        <blockquote>
+          <p data-th-text="${q.content}"></p>
+            <!-- <strong>Imagination</strong> is <em>more important</em> than <strong>knowledge</strong> -->
+        </blockquote>
+        <b data-th-text="${q.author}"></b>
+
+    </article>
+    </section>
     
-                <div class="text-center mb-4 pb-2">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-quotes/bulb.webp"
-                    alt="Bulb" width="100">
-                </div>
-    
-                <figure class="text-center mb-0" data-th-each="q: ${quote}" >
+                <!-- <figure class="text-center mb-0" data-th-each="q: ${quote}" >
                   <blockquote class="blockquote">
                     <p class="pb-3">
                       <i class="fas fa-quote-left fa-xs text-primary"></i>
@@ -87,14 +89,8 @@
                   </blockquote>
                   <figcaption class="blockquote-footer mb-0" data-th-text="${q.author}">
                   </figcaption>
-                </figure>
+                </figure> -->
     
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Bootstrap Bundle with Popper -->
     <script
