--- a/src/main/resources/static/styles/tribe.css
+++ b/src/main/resources/static/styles/tribe.css
@@ -1,6 +1,6 @@
-body{margin-top:20px;
+body{
+    margin-top:20px;
     background-color: hsla(0, 0%, 100%, 0.9) !important;
-
     background-repeat: no-repeat;
     background-size: auto;
     -webkit-background-size: cover;
