--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" th:href="@{/css/style.css}" />
+  <link th:href="@{/styles/about.css}" rel="stylesheet" />
   <link th:href="@{https://fonts.googleapis.com/css2?family=Alegreya&display=swap}" rel="stylesheet" />
   <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css}" />
   <title>Book Tribe</title>
@@ -21,87 +21,117 @@
         <img
           src="https://media.istockphoto.com/vectors/default-profile-picture-avatar-photo-placeholder-vector-illustration-vector-id1223671392?k=20&m=1223671392&s=170667a&w=0&h=kEAA35Eaz8k8A3qAGkuY8OZxpfvn9653gDjQwDHZGPE="
           alt="Avatar Logo" style="width: 40px" class="rounded-pill" />
-      </a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" style="color: white" th:href="@{/profile}"><i class="bi bi-house-heart-fill"></i> Home </a>
+            <a class="nav-link" style="color: white" th:href="@{/profile}"><i class="bi bi-house-heart-fill"></i> Home
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white" th:href="@{/goals}"><i class="bi bi-bookmark-heart-fill"></i> Reading Goals </a>
+            <a class="nav-link" style="color: white" th:href="@{/goals}"><i class="bi bi-bookmark-heart-fill"></i>
+              Reading Goals
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white" th:href="@{/tribe}"><i class="bi bi-person-hearts"></i> Book Tribe </a>
+            <a class="nav-link" style="color: white" th:href="@{/tribe}"><i class="bi bi-person-hearts"></i> Book Tribe
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white" th:href="@{/inspire}"><i class="bi bi-moon-stars-fill"></i> Inspire </a>
+            <a class="nav-link" style="color: white" th:href="@{/inspire}"><i class="bi bi-moon-stars-fill"></i> Inspire
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: white" th:href="@{/about}"><i class="bi bi-book-half"></i> About </a>
+            <a class="nav-link" style="color: white" th:href="@{/about}"><i class="bi bi-book-half"></i> About
+            </a>
           </li>
         </ul>
         <form class="d-flex" action="/search" method="GET">
-          <input class="form-control me-2" type="text" name="book" id="book" placeholder="Book Name">
-          <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
+          <input class="form-control me-2" type="text" name="book" id="book" placeholder="Book Name" />
+          <button class="btn btn-outline-light" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
         </form>
-        <div style="margin-left: 50px;">
+        <div style="margin-left: 50px">
           <form class="d-flex" action="/logout" method="post">
-            <button class="btn btn-outline-light" type="submit"><i class="bi bi-door-closed-fill"></i> Logout</button>
+            <button class="btn btn-outline-light" type="submit">
+              <i class="bi bi-door-closed-fill"></i> Logout
+            </button>
           </form>
         </div>
       </div>
     </div>
   </nav>
-
-  <div class="bg-light">
-    <div class="container py-5">
-      <div class="row h-100 align-items-center py-5">
-        <div class="col-lg-6">
-          <h1 class="display-4">Who Are We?</h1>
-          <p class="lead text-muted mb-0">Created by fellow bookworms like you</p>
-          <p class="lead text-muted mb-0">We wanted a fun way to keep track of our books and reading habits!</p>
-
-        </div>
-        <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png"
-            alt="" class="img-fluid"></div>
+  <section style="padding: 100px">
+    <div class="head">
+      <div class="headerobjectswrapper">
+        <header>All About The Tribe</header>
       </div>
+
+      <div class="subhead">Who are we and what do we do?</div>
+
+      <div class="container my-5">
+        <div class="row">
+          <img class="banner" src="https://i.pinimg.com/originals/49/66/08/496608bfeedd20ca4f6388d721cc8392.gif"
+           />
+          <div class="p-5 mt-4">
+            <h1 class="display-4"> A Community of Bookworms
+            </h1>
+            <p class="lead"> Created by an avid bookworm and reader who wanted a fun and creative place to connect with other bookworms, which are known as tribe members.</p>
+            <a th:href="@{/tribe}" class="btn btn-outline-dark"> Find a Tribe Member </a>
+          </div>
+        </div>
+      </div>
+<!-- Reading Habits Section -->
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-lg-6">
+            <img class=" w-100 shadow" src="https://media.giphy.com/media/8m57WEg0TbVggnqv8Y/giphy.gif"
+              style="width: 400px; height:400px" />
+          </div>
+
+          <div class="col-lg-6">
+            <div class="p-5 mt-4">
+              <h1 class="display-4"> Track Reading Habits 
+              </h1>
+              <p class="lead"> Unsure of how many books you've been reading for the month or year? Keep track of what you've read or are reading with our easy to use tracker! </p>
+              <a th:href="@{/goals}" class="btn btn-outline-dark"> Track Your Goals </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<!-- Inspire  Section -->
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1 class="display-4"> Be Inspired </h1>
+            <p class="lead"> Be inspired by a random quote of the day and a poem written by famous authors and poets all over the world throughout history. </p>
+            <a th:href="@{/inspiration}" class="btn btn-outline-dark"> Get Inspiration </a>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="p-5 mt-4">
+              <img class=" w-100 shadow" src="https://media.giphy.com/media/jtWmzGO3ID6dtjeMQZ/giphy.gif"
+              style="width: 400px; height:400px" />
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: #bc9a85">
+      © 2022 Copyright:
+      <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
     </div>
-  </div>
-
-  <div class="bg-white py-5">
-    <div class="container py-5">
-      <div class="row align-items-center mb-5">
-        <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-          <h2 class="font-weight-light">Keep track of your reading habits</h2>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-          <a th:href="@{/goals}" class="btn btn-light px-5 rounded-pill shadow-sm">Create a Goal</a>
-        </div>
-        <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-            src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt=""
-            class="img-fluid mb-4 mb-lg-0"></div>
-        <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-          <h2 class="font-weight-light">Get to know fellow bookworms</h2>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-          <a th:href="@{/tribe}" class="btn btn-light px-5 rounded-pill shadow-sm">Connect with the Tribe</a>
-        </div>
-      </div>
-    </div>
-  </div>
+    <!-- Copyright -->
+  </footer>
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
