--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -179,6 +179,15 @@
           alt=""
       /></a>
     </div>
+
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: #bc9a85">
+        © 2022 Copyright:
+        <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
+      </div>
+      <!-- Copyright -->
+    </footer>
     <!-- Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
