--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -77,6 +77,15 @@
       </form>
     </div>
 
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: #bc9a85">
+        © 2022 Copyright:
+        <a class="text-dark" href="https://github.com/chrysaliswoon/booktribe"> Developed by Chrysalis </a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
